k8s/crawler/crawler-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  labels:
    app: search_engine
    component: crawler
spec:
  replicas: 3
  selector:
    matchLabels:
      app: search_engine
      component: crawler
  template:
    metadata:
      name: crawler
      labels:
        app: search_engine
        component: crawler
    spec:
      containers:
      - image: deron73/crawler-engine:1.0
        name: crawler
